Update build-component.groovy